--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <a-scene>
       <a-assets>
-       <audio id="paradise" src="paradise.mp3" preload="auto"></audio> 
+       <audio id="paradise" src="paradise.mp3" preload="auto" autoplay="true" loop="true" position="1 1 0"></audio> 
       </a-assets>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow sound ="src: #paradise; autoplay: true"></a-cylinder>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
       <a-sky color="#ECECEC"></a-sky>
       <a-entity position ="0 0 0">
