--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <a-scene>
       <a-assets>
-       <audio id="paradise" src="assets/paradise.mp3"></audio> 
+       <audio id="paradise" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fparadise.mp3?1510846125117"></audio> 
       </a-assets>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
