--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <a-scene>
       <a-assets>
-       <audio id="paradise" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fwind_1234-mike-koenig.mp3?1511883549661"></audio> 
+       <audio id="wind1" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fwind_1234-mike-koenig.mp3?1511883549661"></audio> 
       </a-assets>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" sound="src: #paradise; autoplay: true" shadow></a-box>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" sound="src: #paradise; autoplay: false; on:" shadow></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
