--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta name="description" content="Hello, WebVR! - A-Frame">
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <script src="CameraPos.js"></script>
+    <script>
+    
+    </script>
     
   </head>
   <body>
     <a-scene>
       <a-assets>
-       <audio id="wind1" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fwind_1234-mike-koenig.mp3?1511883549661"></audio> 
+       <audio id="wind1" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fwind_1234-mike-koenig.mp3?1511883549661"></audio>
+       <audio id="wind2" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fwind-howl_zJ85_pVu.mp3?1512004662905"></audio>
+       <audio id="wind3" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fphasing-hissy-wind-looping_fyR_wBEu.mp3?1512004663500"></audio>
       </a-assets>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" sound="src: #paradise; autoplay: false; on:" shadow></a-box>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" sound="src: #wind1; autoplay: true" shadow></a-box>
+      <a-sound src="#wind2" autoplay="true" loop="true" position = "0 0 0 "></a-sound>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
