🛳🍛 Checkpoint my-folder/cool-file.js:554823

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="my-folder/cool-file.js"></script>
     
   </head>
-  <body>
+  <body onload="loadWalking()">
     <a-scene>
       <a-assets>
        <audio id="wind1" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fwind_1234-mike-koenig.mp3?1511883549661"></audio>
