🌖🍓 Checkpoint my-folder/cool-file.js:554823 index.html:554823

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
       <a-sky color="#ECECEC"></a-sky>
       <a-entity position ="0 0 0">
-        <a-camera id="movement"></a-camera>
+        <a-camera id="movement" position=".05 -.6 0"></a-camera>
       </a-entity>
       
       
