--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </a-assets>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" sound="src: #wind1; autoplay: false" shadow></a-box>
       <a-entity id="windy3" sound="src:#wind3; loop: true; volume: .09" position="0 -5 -10 "></a-entity>
-      <a-entity id="windy1" sound="src:#wind1; loop: true; volume: 5" position="0 -5 -40 "></a-entity>
+      <a-entity id="windy1" sound="src:#wind1; loop: true; volume: .5" position="0 -5 -40 "></a-entity>
       <a-entity id="bridgeCreak1" sound="src:#bridge1;volume:3" position-"0 -1 -30"></a-entity>
-      <a-entity json-model="src: bridge.json; scale: .01 .01 .01; position: 0 -10 0;"></a-entity>
+      <a-entity object-model="src:/police-car-threejs/police-car.json; scale: .01 .01 .01;"></a-entity>
       <a-sphere position="3 1.25 -10" radius="1.25" color="#EF2D5E" shadow></a-sphere>
       <a-sphere position="-3 1.25 -20" radius="1.25" color="#EF2D5E" shadow></a-sphere>
       <a-sphere position="3 1.25 -30" radius="1.25" color="#EF2D5E" shadow></a-sphere>
