--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
        <audio id="wind3" src="https://cdn.glitch.com/80c3e4c6-21c3-4c12-9316-1852077680bd%2Fphasing-hissy-wind-looping_fyR_wBEu.mp3?1512004663500"></audio>
        <audio id="bridge1" src="bridgeCreak.mp3"></audio>
       </a-assets>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" sound="src: #wind1; autoplay: false" shadow></a-box>
       <a-entity id="windy3" sound="src:#wind3; loop: true; volume: .09" position="0 -5 -10 "></a-entity>
       <a-entity id="windy1" sound="src:#wind1; loop: true; volume: .5" position="0 -5 -40 "></a-entity>
       <a-entity id="bridgeCreak1" sound="src:#bridge1;volume:3" position-"0 -1 -30"></a-entity>
@@ -24,10 +23,19 @@
       <a-entity object-model="src: bridge.obj; position: 0 -10 -10"></a-entity>
       <a-sphere position="3 1.25 -10" radius="1.25" color="#EF2D5E" shadow></a-sphere>
       <a-sphere position="-3 1.25 -20" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-sphere position="3 1.25 -30" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-sphere position="-3 1.25 -40" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+      <a-sphere position="3 1.25 -35" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-sphere position="-3 1.25 -45" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-sphere position="3 1.25 -55" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-sphere position="-3 1.25 -65" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-sphere position="3 1.25 -75" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-sphere position="-3 1.25 -85" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-sphere position="3 1.25 -95" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-sphere position="-3 1.25 -105" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-box position="0 -2 -35" width = "2" height = "35" depth = "1" rotation = "-90 0 0" shadow></a-box>
+
+
+      <a-box position="0 -26 -4" rotation="-90 0 0" width="1000" height="40" depth = "50" color="#7BC8A4" shadow></a-box>
+      <a-box position="0 -26 -60" rotation="-90 0 0" width="1000" height="40" depth = "50" color="#7BC8A4" shadow></a-box>
       <a-sky color="#ECECEC"></a-sky>
       <a-entity position ="0 0 0">
         <a-camera id="movement" position=".05 -.6 0"></a-camera>
