--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
       <a-sphere position="3 1.25 -95" radius="1.25" color="#EF2D5E" shadow></a-sphere>
       <a-sphere position="-3 1.25 -105" radius="1.25" color="#EF2D5E" shadow></a-sphere>
       <a-box position="0 -2 -35" width = "2" height = "35" depth = "1" rotation = "-90 0 0" shadow></a-box>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "0 -15 -30"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "4 -15 -35"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "-7 -15 -35"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "-1 -15 -29"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "-2 -15 -40"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "-4 -15 -45"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "5 -15 -30"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "0 -15 -24"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "0 -15 -35"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "-7 -15 -30"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "4 -15 -29"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "2 -15 -40"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "4 -15 -45"></a-cone>
-      <a-cone color="tomato" radius-bottom="1" radius-top = ".5" position = "-5 -15 -30"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "0 -15 -30"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "4 -15 -35"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "-7 -15 -35"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "-1 -15 -29"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "-2 -15 -40"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "-4 -15 -45"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "5 -15 -30"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "0 -15 -24"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "0 -15 -35"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "-7 -15 -30"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "4 -15 -29"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "2 -15 -40"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "4 -15 -45"></a-cone>
+      <a-cone color="tomato" radius-bottom="1" radius-top = "0" position = "-5 -15 -30"></a-cone>
       <a-box position="0 -26 -4" rotation="-90 0 0" width="1000" height="40" depth = "50" color="#7BC8A4" shadow></a-box>
       <a-box position="0 -26 -60" rotation="-90 0 0" width="1000" height="40" depth = "50" color="#7BC8A4" shadow></a-box>
       <a-sky color="#ECECEC"></a-sky>
