--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
     <script src="CameraPos.js"></script>
     <script src="my-folder/cool-file.js"></script>
+    <style>
+    .a-enter-vr-button {
+      cursor:pointer !important;
+    }
+</style>
 
   </head>
   <body onload="loadWalking()">
